# langchain-gateway-demo

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: agents.md  architecture.md  gateway-integration.md  glossary.md  prerequisites.md  report-format.md
examples/llm-production-costs/: README.md  report.html
src/lclg/: __init__.py  __main__.py  config.py  pipeline.py  proxy_metering.py
src/lclg/agents/: __init__.py  _llm.py  analyst.py  comparator.py  planner.py  reporter.py  researcher.py
src/lclg/modes/: __init__.py  explicit_managed.py  explicit_selfhosted.py  proxy_managed.py  proxy_selfhosted.py
src/lclg/report/: __init__.py  builder.py  html.py  markdown.py
src/lclg/report/templates/: report.html.jinja2
tests/: conftest.py  test_analyst.py  test_comparator.py  test_pipeline.py  test_planner.py  test_proxy_metering.py  test_report_builder.py  test_researcher.py
